--- a/index.html
+++ b/index.html
@@ -28,7 +28,37 @@
 </head>
 <body>
     <div class="page">
-      <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OQ4ltE5wyKsf7ooV7GaFvK" target="_blank">point reyes 2018 feedback</a>
+      <h1>a3dddog 2017</h1>
+        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OQ4ltE5wyKsf7ooV7GaFvK" target="_blank">point reyes 2018 feedback</a>
+        <hr>
+        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1M5yVbMQrwSxI-lm3AnwXLK" target="_blank">point reyes 2018 source footage</a>
+        <hr>
+        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1NPt17AntUoO4zTBr3dXtHn" target="_blank">casey and the elie's</a>//
+        <a href="https://soundcloud.com/user-457050893/sets/casey-and-the-elies" target="_blank">soundcloud</a>
+        <hr>
+        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MlQ7KHWXPTp1VwQmrnJnW9" target="_blank">orchard lane dev</a>
+        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MK_oktlDDaB8aIaeBiTRHf" target="_blank">feedback world</a>
+        <hr>
+      <h1>samradicalelie 2017</h1>
+      <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vbf4sPJslKtt3qE-P9q2p3U" target="_blank">LITTLE BROTHERS</a>
+        <hr>
+      <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
+        <hr>
+        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">greece</a>
+        <hr>
+      <h1>a3dddog 2016</h1>
+       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MQy10YAtGktPojKjIu-tZJ" target="_blank">wilams'</a>
+        <hr>
+       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PtAfgdkPIR8LjKgHyNoazr" target="_blank">2016-12-27</a>
+        <hr>
+       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OINNxr37xDjFwNhJn1oD0N" target="_blank">2016-12-26</a>
+        <hr>
+       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PxEP-J21uyPsz3HTbebYBA" target="_blank">2016-12-25</a>
+        <hr>
+       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">2016-12-23</a>
+        <hr>
+      <h1>samradicalelie 2017</h1>
+      <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
     </div>
 </body>
 </html>
