--- a/index.html
+++ b/index.html
@@ -54,11 +54,16 @@
        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OINNxr37xDjFwNhJn1oD0N" target="_blank">2016-12-26</a>
         <hr>
        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PxEP-J21uyPsz3HTbebYBA" target="_blank">2016-12-25</a>
-        <hr>
        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">2016-12-23</a>
-        <hr>
+              <hr>
       <h1>samradicalelie 2017</h1>
       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
+      <h1>adddog london 2016</h1>
+              <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sam solo jams</a>
+              <hr>
+              <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sav & sam jams</a>
+        <hr>
+
     </div>
 </body>
 </html>
