--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 <body>
     <div class="page">
       <h1>a3dddog 2017</h1>
+      <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PpM_MGaFRAu6ho1Ys4gOaw" target="_blank">MIDSUMMER_PLAY</a>      
+        <hr>
+      
+                <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OoYoDVszwkHqEscdnmh_oG" target="_blank">elie random videos 2017-2018 (ELIE_RANDOM)</a>      
+        <hr>
+              <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mo7PM_k8rO-Ksl3ACpZBoy" target="_blank">point reyes beach & friends 2018 (BEACH_REYES_2018)</a>
+        <hr>
+      
         <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OQ4ltE5wyKsf7ooV7GaFvK" target="_blank">point reyes 2018 feedback</a>
         <hr>
         <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1M5yVbMQrwSxI-lm3AnwXLK" target="_blank">point reyes 2018 source footage</a>
@@ -63,7 +71,7 @@
       <h1>samradicalelie 2017</h1>
       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
       <h1>adddog london 2016</h1>
-              <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sam solo jams</a>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sam solo jams</a>
               <hr>
               <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sav & sam jams</a>
         <hr>
