--- a/index.html
+++ b/index.html
@@ -1,82 +1,79 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html lang="en" class="no-js old-ie"><![endif]-->
-<!--[if gt IE 9]><!--><html lang="en" class="no-js"><!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui">
-
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-
-  <meta property="og:title" content="">
-  <meta property="og:site_name" content="">
-  <meta property="og:description" content="">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <link rel="image_src" href="">
-  <link rel="icon" type="image/png" href="img/icon/favicon.png">
-  <link rel="apple-touch-icon" href="img/icon/touch-icon-iphone.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="img/icon/touch-icon-ipad.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="img/icon/touch-icon-iphone-retina.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="img/icon/touch-icon-ipad-retina.png" />
-
-  <title>Youtube playlists</title>
-  <!-- CSS -->
-  <link href=main.css  rel="stylesheet">
-</head>
-<body>
-    <div class="page">
-      <h1>a3dddog 2017</h1>
-      <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PpM_MGaFRAu6ho1Ys4gOaw" target="_blank">MIDSUMMER_PLAY</a>      
-        <hr>
-      
-                <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OoYoDVszwkHqEscdnmh_oG" target="_blank">elie random videos 2017-2018 (ELIE_RANDOM)</a>      
-        <hr>
-              <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mo7PM_k8rO-Ksl3ACpZBoy" target="_blank">point reyes beach & friends 2018 (BEACH_REYES_2018)</a>
-        <hr>
-      
-        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OQ4ltE5wyKsf7ooV7GaFvK" target="_blank">point reyes 2018 feedback</a>
-        <hr>
-        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1M5yVbMQrwSxI-lm3AnwXLK" target="_blank">point reyes 2018 source footage</a>
-        <hr>
-        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1NPt17AntUoO4zTBr3dXtHn" target="_blank">casey and the elie's</a>//
-                    <hr>
-        <a href="https://soundcloud.com/user-457050893/sets/casey-and-the-elies" target="_blank">soundcloud</a>
-        <hr>
-              <a href="      https://www.youtube.com/playlist?list=PLZRcgvIPIUuWH9WxuUqV2QEs5S-C63vzx" target="_blank">orchard lane</a>
-              <hr>
-        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MlQ7KHWXPTp1VwQmrnJnW9" target="_blank">orchard lane dev</a>
-              <hr>
-        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MK_oktlDDaB8aIaeBiTRHf" target="_blank">feedback world</a>
-        <hr>
-      <h1>samradicalelie 2017</h1>
-      <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vbf4sPJslKtt3qE-P9q2p3U" target="_blank">LITTLE BROTHERS</a>
-        <hr>
-      <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
-        <hr>
-        <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">greece</a>
-        <hr>
-      <h1>a3dddog 2016</h1>
-       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MQy10YAtGktPojKjIu-tZJ" target="_blank">wilams'</a>
-        <hr>
-       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PtAfgdkPIR8LjKgHyNoazr" target="_blank">2016-12-27</a>
-        <hr>
-       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OINNxr37xDjFwNhJn1oD0N" target="_blank">2016-12-26</a>
-        <hr>
-       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PxEP-J21uyPsz3HTbebYBA" target="_blank">2016-12-25</a>
-       <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">2016-12-23</a>
-              <hr>
-      <h1>samradicalelie 2017</h1>
-      <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
-      <h1>adddog london 2016</h1>
+<!--[if lt IE 9]>
+<html lang="en" class="no-js old-ie">
+   <![endif]-->
+   <!--[if gt IE 9]><!-->
+   <html lang="en" class="no-js">
+      <!--<![endif]-->
+      <head>
+         <meta charset="utf-8">
+         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui">
+         <meta name="description" content="">
+         <meta name="keywords" content="">
+         <meta property="og:title" content="">
+         <meta property="og:site_name" content="">
+         <meta property="og:description" content="">
+         <meta property="og:type" content="website">
+         <meta property="og:url" content="">
+         <meta property="og:image" content="">
+         <link rel="image_src" href="">
+         <link rel="icon" type="image/png" href="img/icon/favicon.png">
+         <link rel="apple-touch-icon" href="img/icon/touch-icon-iphone.png" />
+         <link rel="apple-touch-icon" sizes="76x76" href="img/icon/touch-icon-ipad.png" />
+         <link rel="apple-touch-icon" sizes="120x120" href="img/icon/touch-icon-iphone-retina.png" />
+         <link rel="apple-touch-icon" sizes="152x152" href="img/icon/touch-icon-ipad-retina.png" />
+         <title>Youtube playlists</title>
+         <!-- CSS -->
+         <link href=main.css  rel="stylesheet">
+      </head>
+      <body>
+         <div class="page">
+            <h1>a3dddog 2017</h1>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PpM_MGaFRAu6ho1Ys4gOaw" target="_blank">MIDSUMMER_PLAY</a>      
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OoYoDVszwkHqEscdnmh_oG" target="_blank">elie random videos 2017-2018 (ELIE_RANDOM)</a>      
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mo7PM_k8rO-Ksl3ACpZBoy" target="_blank">point reyes beach & friends 2018 (BEACH_REYES_2018)</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OQ4ltE5wyKsf7ooV7GaFvK" target="_blank">point reyes 2018 feedback</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1M5yVbMQrwSxI-lm3AnwXLK" target="_blank">point reyes 2018 source footage</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1NPt17AntUoO4zTBr3dXtHn" target="_blank">casey and the elie's</a>//
+            <hr>
+            <a href="https://soundcloud.com/user-457050893/sets/casey-and-the-elies" target="_blank">soundcloud</a>
+            <hr>
+            <a href="      https://www.youtube.com/playlist?list=PLZRcgvIPIUuWH9WxuUqV2QEs5S-C63vzx" target="_blank">orchard lane</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MlQ7KHWXPTp1VwQmrnJnW9" target="_blank">orchard lane dev</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MK_oktlDDaB8aIaeBiTRHf" target="_blank">feedback world</a>
+            <hr>
+            <h1>samradicalelie 2017</h1>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vbf4sPJslKtt3qE-P9q2p3U" target="_blank">LITTLE BROTHERS</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vY9viBjCIJk6h_nv36zO_Kn" target="_blank">balkans</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vanGmo-yJdSarjkPPAXAKU6" target="_blank">greece</a>
+            <hr>
+            <h1>a3dddog 2016</h1>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MQy10YAtGktPojKjIu-tZJ" target="_blank">wilams'</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PtAfgdkPIR8LjKgHyNoazr" target="_blank">2016-12-27</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OINNxr37xDjFwNhJn1oD0N" target="_blank">2016-12-26</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PxEP-J21uyPsz3HTbebYBA" target="_blank">2016-12-25</a>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">2016-12-23</a>
+            <hr>
+            <h1>samradicalelie 2017</h1>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
+            <h1>adddog london 2016</h1>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sam solo jams</a>
-              <hr>
-              <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sav & sam jams</a>
-        <hr>
-
-    </div>
-</body>
-</html>
-
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sav & sam jams</a>
+            <hr>
+         </div>
+      </body>
+   </html>
