--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       </head>
       <body>
          <div class="page">
+            <a href="https://github.com/adddog/youtube-playlists" target="_blank">github</a>      
+            <h1>a3dddog 2018</h1>
+            <a href="https://www.youtube.com/watch?v=wwtyYkV2ue8&list=PLuTh1a1eg5va2jTzw-vTQWQHLq1caDNI4" target="_blank">YOSEMITE 2018</a>      
+            <hr>
+
             <h1>a3dddog 2017</h1>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PpM_MGaFRAu6ho1Ys4gOaw" target="_blank">MIDSUMMER_PLAY</a>      
             <hr>
