--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vanGmo-yJdSarjkPPAXAKU6" target="_blank">greece</a>
             <hr>
             <h1>a3dddog 2016</h1>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZ4NbXHavLdiJD3xkyrT7xi" target="_blank">reyes-last-day</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZK4TjFjjKeHf0cyLA-MAYy" target="_blank">reyes-cul-de-sac</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vbZTFzVvH3_lpTCgPlfzaoV" target="_blank">reyes-hearts-desire</a>
+            <hr>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MQy10YAtGktPojKjIu-tZJ" target="_blank">wilams'</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZ1PnDQIiolbphrhaX07hxR" target="_blank">reyes-music-video</a>
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PtAfgdkPIR8LjKgHyNoazr" target="_blank">2016-12-27</a>
             <hr>
