--- a/index.html
+++ b/index.html
@@ -30,13 +30,20 @@
       <body>
          <div class="page">
             <a href="https://github.com/adddog/youtube-playlists" target="_blank">github</a>      
+            <h1>accounts:</h1>
+            <a href="https://www.youtube.com/channel/UCrePUo0w4gItS78HdbqyWng" target="_blank">samradicalelie</a>     
+            <a href="https://www.youtube.com/channel/UCdoijbz33OaXdtDsLr_hx8A" target="_blank">a3dddog</a>     
+            <hr>
             <h1>a3dddog 2018</h1>
             <a href="https://www.youtube.com/watch?v=wwtyYkV2ue8&list=PLuTh1a1eg5va2jTzw-vTQWQHLq1caDNI4" target="_blank">YOSEMITE 2018</a>      
+            <hr>
+            <a href="https://www.youtube.com/watch?v=PBZEuf8D6fA&list=PLdfP9oYBVX1Mo7PM_k8rO-Ksl3ACpZBoy" target="_blank">point reyes beech</a>      
             <hr>
 
             <h1>a3dddog 2017</h1>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PpM_MGaFRAu6ho1Ys4gOaw" target="_blank">MIDSUMMER_PLAY</a>      
             <hr>
+            
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OoYoDVszwkHqEscdnmh_oG" target="_blank">elie random videos 2017-2018 (ELIE_RANDOM)</a>      
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mo7PM_k8rO-Ksl3ACpZBoy" target="_blank">point reyes beach & friends 2018 (BEACH_REYES_2018)</a>
@@ -49,14 +56,20 @@
             <hr>
             <a href="https://soundcloud.com/user-457050893/sets/casey-and-the-elies" target="_blank">soundcloud</a>
             <hr>
-            <a href="      https://www.youtube.com/playlist?list=PLZRcgvIPIUuWH9WxuUqV2QEs5S-C63vzx" target="_blank">orchard lane</a>
+            <a href="https://www.youtube.com/playlist?list=PLZRcgvIPIUuWH9WxuUqV2QEs5S-C63vzx" target="_blank">orchard lane</a>
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MlQ7KHWXPTp1VwQmrnJnW9" target="_blank">orchard lane dev</a>
+            <hr>
+            <a href="https://www.youtube.com/watch?v=s4p3r5yXub0&list=PLdfP9oYBVX1NvD7wrUADNuE0lpFeWnDXg" target="_blank">orchard lane dev</a>
+            <hr>
+            <a href="https://www.youtube.com/watch?v=uWdAoAJeSOk&list=PLdfP9oYBVX1OfpSbgPlcrvayNvRhIPezp" target="_blank">orchard lane 360 nikon</a>
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MK_oktlDDaB8aIaeBiTRHf" target="_blank">feedback world</a>
             <hr>
             <h1>samradicalelie 2017</h1>
             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vbf4sPJslKtt3qE-P9q2p3U" target="_blank">LITTLE BROTHERS</a>
+            <hr>
+            <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Oy5DxNqodKL7DdDZzKBbkd" target="_blank">little brothers raw jams</a>
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vY9viBjCIJk6h_nv36zO_Kn" target="_blank">balkans</a>
             <hr>
@@ -64,17 +77,16 @@
             <hr>
             <h1>a3dddog 2016</h1>
             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZ4NbXHavLdiJD3xkyrT7xi" target="_blank">reyes-last-day</a>
-            <hr>
             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZK4TjFjjKeHf0cyLA-MAYy" target="_blank">reyes-cul-de-sac</a>
-            <hr>
             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vbZTFzVvH3_lpTCgPlfzaoV" target="_blank">reyes-hearts-desire</a>
+             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZ1PnDQIiolbphrhaX07hxR" target="_blank">reyes-music-video</a>
+            
             <hr>
              <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1MQy10YAtGktPojKjIu-tZJ" target="_blank">wilams'</a>
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZR2A1Hu99eu0dOBHGynz8z" target="_blank">ben iphone xmas</a>
             <hr>
-            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZ1PnDQIiolbphrhaX07hxR" target="_blank">reyes-music-video</a>
-            <hr>
+
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PtAfgdkPIR8LjKgHyNoazr" target="_blank">2016-12-27</a>
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OINNxr37xDjFwNhJn1oD0N" target="_blank">2016-12-26</a>
@@ -84,10 +96,16 @@
             <hr>
             <h1>samradicalelie 2017</h1>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1OLMPuW1oueUfZeACWhRrIW" target="_blank">balkans</a>
-            <h1>adddog london 2016</h1>
+            <h1>adddog london 2015-2016</h1>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sam solo jams</a>
             <hr>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1Mh2spDPkm7yzyftCbD0BNb" target="_blank">sav & sam jams</a>
+            <hr>
+             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vbCa-G0APvdzFqFosBpgmqi" target="_blank">walking around london 2015</a>
+            <hr>
+            <a href="https://www.youtube.com/watch?v=2Xe5vOc6D4A&list=PLdfP9oYBVX1OYNQK2yC1lsKz-AmMHJ5-k" target="_blank">chrome gnome slo-mo</a>
+            <hr>
+             <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5va2ITP00X_UkarfAxDmfIoR" target="_blank">VINES: samrad</a>
             <hr>
          </div>
       </body>
