--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <h1>accounts:</h1>
             <a href="https://www.youtube.com/channel/UCrePUo0w4gItS78HdbqyWng" target="_blank">samradicalelie</a>     
             <a href="https://www.youtube.com/channel/UCdoijbz33OaXdtDsLr_hx8A" target="_blank">a3dddog</a>     
+            <a href="https://www.youtube.com/channel/UCQIuwX08-ZUQ2SlVzey18sQ" target="_blank">samelielaneycollege</a>     
             <hr>
+            <h1>samelielaneycollege</h1>            
+            <a href="https://www.youtube.com/playlist?list=PLyJNxeSlpBXak1OoBh1BQ23xlyoVwJky4" target="_blank">houdini tutorial</a>      
             <h1>a3dddog 2018</h1>
             <a href="https://www.youtube.com/watch?v=wwtyYkV2ue8&list=PLuTh1a1eg5va2jTzw-vTQWQHLq1caDNI4" target="_blank">YOSEMITE 2018</a>      
             <hr>
