--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <hr>
             <a href="https://www.youtube.com/watch?v=PBZEuf8D6fA&list=PLdfP9oYBVX1Mo7PM_k8rO-Ksl3ACpZBoy" target="_blank">point reyes beech</a>      
             <hr>
+            <a href="https://www.youtube.com/playlist?list=PLRQ2jIXShfkYJfmFppQNBsiXzNlgTKVpo" target="_blank">hausparty</a>      
+            <hr>
 
             <h1>a3dddog 2017</h1>
             <a href="https://www.youtube.com/playlist?list=PLdfP9oYBVX1PpM_MGaFRAu6ho1Ys4gOaw" target="_blank">MIDSUMMER_PLAY</a>      
