--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <h1>samelielaneycollege</h1>            
             <a href="https://www.youtube.com/playlist?list=PLyJNxeSlpBXak1OoBh1BQ23xlyoVwJky4" target="_blank">houdini tutorial</a>      
             <h1>a3dddog 2018</h1>
+            <a href="https://www.youtube.com/playlist?list=PLuTh1a1eg5vZOdAFZDy5TNLXubYbpSP3N" target="_blank">Gods Are Not Happy [Failed Camera]</a>      
+                        <hr>
             <a href="https://www.youtube.com/watch?v=wwtyYkV2ue8&list=PLuTh1a1eg5va2jTzw-vTQWQHLq1caDNI4" target="_blank">YOSEMITE 2018</a>      
             <hr>
             <a href="https://www.youtube.com/watch?v=PBZEuf8D6fA&list=PLdfP9oYBVX1Mo7PM_k8rO-Ksl3ACpZBoy" target="_blank">point reyes beech</a>      
